client/src/css/OrderHistory.css
#order-history {
    background-color: #282c34;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: start;
    font-size: calc(10px + 2vmin);
    color: white;  
    min-height: 100vh;
}

#username {
    align-self: start;
    margin-left: 1rem;
}

